# ChessBot1000

./: BoardManager.cpp  BoardManager.h  CMakeLists.txt  CommonUtilities.h  GameManager.cpp  GameManager.h  README.md  attributions.txt  main.cpp
BoardandPieces/: MoveGenerator.cpp  MoveGenerator.h  Pieces.h
BoardandPieces/Board/: Board.cpp  Board.h  SquareBoard.cpp  SquareBoard.h
BoardandPieces/Pieces/: piece_list.cpp  piece_list.h
BoardandPieces/Renderers/: GraphicalBoard.cpp  GraphicalBoard.h
Pieces/: Piece.cpp  Piece.h  PieceManager.cpp  PieceManager.h  piece_list.cpp  piece_list.h
Pieces/Other_pieces/: King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h
Pieces/Sliding_pieces/: Bishop.cpp  Bishop.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  SlidingPiece.cpp  SlidingPiece.h
board_representations/: SquareBoardRepresentation.cpp  SquareBoardRepresentation.h
